--- a/bot/.env.EXAMPLE
+++ b/bot/.env.EXAMPLE
@@ -4,4 +4,4 @@ TWITCH_GRANT_TYPE=client_credentials
 
 # You can get it from here to test: https://twitchapps.com/tmi/
 TWITCH_OAUTH_PASS=
-TWITCH_YOUR_USERNAME=nandosangenetto
+TWITCH_YOUR_USERNAME=
